--- a/Lesson 4/css/medium.css
+++ b/Lesson 4/css/medium.css
@@ -4,8 +4,10 @@
   }
 
   nav ul li a {
-    justify-content: center;
     padding: 0%;
     font-size: 2rem;
+  }
+  h2, h3 {
+    text-align: left;
   }
 }
