--- a/Lesson 4/css/small.css
+++ b/Lesson 4/css/small.css
@@ -7,7 +7,7 @@ header, footer {
 h1,
 h2,
 h3,
-nav,
+nav,nav button,
 .motto {
   font-weight: normal;
 }
@@ -39,6 +39,7 @@ nav button {
   border: none;
   color: white;
   font-size: 30px;
+  letter-spacing: 3px;
 }
 nav ul {
   list-style-type: none;
