--- a/Lesson 5/css/small.css
+++ b/Lesson 5/css/small.css
@@ -99,7 +99,7 @@ p{
   color: white;
 }
 footer {
-  background-color: #;
+  background-color: #93341a;
   font-family: "Soloway", serif;
   text-align: center;
   color: white;
