--- a/Lesson 5/css/large.css
+++ b/Lesson 5/css/large.css
@@ -21,3 +21,11 @@ h2, h3 {
   text-align: center;
 }
 }
+#Weathersummary{
+  position: absolute;
+  top: 350px;
+  background-color: #99341a;
+  border: 1px solid #000;
+  opacity: 0.9;
+  color: white;
+}
