--- a/Lesson 4/css/large.css
+++ b/Lesson 4/css/large.css
@@ -3,11 +3,12 @@
     display: none;
   }
   nav ul li {
-    float: left;
+    float: right;
     padding: 0.5rem;
   }
   nav ul.hide {
-    display: block;
+    display: flex;
+    justify-content: center;
   }
   nav ul li a {
     border: none;
