--- a/Lesson 5/css/small.css
+++ b/Lesson 5/css/small.css
@@ -18,7 +18,7 @@ nav,nav button,
   float: left;
   width: 7rem;
 }
-.banner{
+#banner{
   color: white;
   background-color: #002129;
   text-align: center;
