--- a/Lesson 4/css/large.css
+++ b/Lesson 4/css/large.css
@@ -3,12 +3,11 @@
     display: none;
   }
   nav ul li {
-    float: right;
+    float: left;
     padding: 0.5rem;
   }
   nav ul.hide {
-    display: flex;
-    justify-content: center;
+    display: block;
   }
   nav ul li a {
     border: none;
