--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,5 +1,5 @@
 body {
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: "Rokkitt", serif;
 }
 header,
 footer {
@@ -20,6 +20,7 @@ footer {
 }
 header {
   font-size: 45px;
+  font-family: "Vollkorn SC", serif;
 }
 img {
   float: right;
