--- a/Lesson6/css/medium.css
+++ b/Lesson6/css/medium.css
@@ -5,19 +5,24 @@
 
   nav ul li a {
     padding: 0%;
-    font-size: 2rem;
+    font-size: 1.25em;
   }
-  footer, h1, h2 {
+  footer,
+  h1,
+  h2 {
     text-align: center;
+    font-size: 2em;
   }
- 
+
   #currentweather {
-    width: 20%;
+    width: 10%;
     float: right;
   }
+  /*--------------5 Day Forecast Table----------------*/
   .forecasttable {
     display: grid;
-    grid-template-columns: auto auto auto auto auto;
+    grid-template-columns: 7.5fr 7.5fr 7.5fr 7.5fr 7.5fr;
+    grid-template-rows: 0.25fr 0.25fr 0.25fr;
     grid-gap: 10px;
     padding: 10px;
     width: 100%;
@@ -55,7 +60,7 @@
     grid-row-start: 3;
     grid-column-start: 4;
   }
-
+  /*----------Gallery Page Table--------------*/
   div.gallerytable {
     display: grid;
     grid-template-columns: 300fr 300fr;
@@ -65,8 +70,7 @@
   }
   footer div.socialtable {
     display: grid;
-    grid-template-columns: repeat(3 , 50px);
-    
+    grid-template-columns: repeat(3, 50px);
   }
   footer div.socialtable img {
     width: 100%;
