--- a/Lesson6/css/large.css
+++ b/Lesson6/css/large.css
@@ -7,7 +7,7 @@
   nav ul li {
     display: flexbox;
     flex: 1 1 auto;
-    margin: auto;
+    margin: auto auto;
     float: left;
   }
   nav ul.hide {
@@ -17,6 +17,7 @@
     border: none;
     padding: 0.5rem 2rem;
     font-size: larger;
+    margin: auto auto;
   }
 
   h2,
