--- a/Lesson6/css/large.css
+++ b/Lesson6/css/large.css
@@ -5,19 +5,18 @@
     display: none;
   }
   nav ul li {
-    display: flexbox;
-    flex: 1 1 auto;
-    margin: auto auto;
+    display: flex;
     float: left;
+    align-items: center;
+
   }
   nav ul.hide {
     display: block;
   }
   nav ul li a {
     border: none;
-    padding: 0.5rem 2rem;
-    font-size: larger;
-    margin: auto auto;
+    padding: .5rem 2rem;
+    font-size: 1.5rem;
   }
 
   h2,
